Added a little bit
Added a little bit of files and fixed a little bit of bugs

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "RedDbg/Include/Deps/tomlplusplus"]
 	path = RedDbg/Include/Deps/tomlplusplus
 	url = https://github.com/marzer/tomlplusplus.git
+[submodule "RedDbg/Source/Deps/pe-parse"]
+	path = RedDbg/Source/Deps/pe-parse
+	url = https://github.com/trailofbits/pe-parse.git
