--- a/RedDbg/imgui.ini
+++ b/RedDbg/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=60,6
 Size=400,400
 
 [Window][##Debugger Interface]
@@ -96,7 +96,7 @@ Column 14 Width=-1
 
 [Table][0x43E0EA12,9]
 RefScale=13
-Column 0  Width=49
+Column 0  Width=66
 Column 1  Width=28
 Column 2  Width=35
 Column 3  Width=28
@@ -1219,6 +1219,42 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0x3422C872,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x206CB7D8,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x51A6FDB7,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1394AC95,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xEB1AC238,4]
+RefScale=13
+Column 0  Sort=0^
+
+[Table][0xCDE04FA1,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x0259435E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB7902F89,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE44FB969,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xAC861ADD,4]
 RefScale=13
 Column 0  Sort=0v
 
