--- a/RedDbg/imgui.ini
+++ b/RedDbg/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 
 [Window][##Debugger Interface]
 Pos=0,35
-Size=1280,800
+Size=2556,1047
 
 [Window][Open##OpenFile]
 Pos=140,200
@@ -96,11 +96,11 @@ Column 14 Width=-1
 
 [Table][0x43E0EA12,9]
 RefScale=13
-Column 0  Width=66
-Column 1  Width=28
-Column 2  Width=35
-Column 3  Width=28
-Column 4  Width=49
+Column 0  Width=112
+Column 1  Width=112
+Column 2  Width=42
+Column 3  Width=484
+Column 4  Width=182
 Column 5  Width=28
 Column 6  Width=70
 Column 7  Weight=1.0000
@@ -1255,6 +1255,14 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0xAC861ADD,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF65F67E8,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x765EC1EF,4]
 RefScale=13
 Column 0  Sort=0v
 
