--- a/RedDbg/imgui.ini
+++ b/RedDbg/imgui.ini
@@ -7,7 +7,7 @@ Pos=0,35
 Size=2556,1047
 
 [Window][Open##OpenFile]
-Pos=140,200
+Pos=136,199
 Size=1000,424
 
 [Window][hPeFileContent ERROR]
@@ -76,30 +76,12 @@ Column 6  Width=35
 Column 7  Weight=1.0000
 Column 8  Width=-1
 
-[Table][0x3FEBC6F2,15]
-RefScale=13
-Column 0  Width=42
-Column 1  Width=14
-Column 2  Width=35
-Column 3  Width=21
-Column 4  Width=21
-Column 5  Width=91
-Column 6  Width=56
-Column 7  Width=77
-Column 8  Width=70
-Column 9  Width=63
-Column 10 Width=77
-Column 11 Width=91
-Column 12 Width=70
-Column 13 Weight=1.0000
-Column 14 Width=-1
-
 [Table][0x43E0EA12,9]
 RefScale=13
 Column 0  Width=112
 Column 1  Width=112
 Column 2  Width=42
-Column 3  Width=484
+Column 3  Width=532
 Column 4  Width=182
 Column 5  Width=28
 Column 6  Width=70
@@ -1265,4 +1247,33 @@ Column 0  Sort=0v
 [Table][0x765EC1EF,4]
 RefScale=13
 Column 0  Sort=0v
+
+[Table][0x1C41CC59,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x11F80F10,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3FEBC6F2,18]
+RefScale=13
+Column 0  Width=42
+Column 1  Width=112
+Column 2  Width=112
+Column 3  Width=42
+Column 4  Width=112
+Column 5  Width=112
+Column 6  Width=21
+Column 7  Width=91
+Column 8  Width=56
+Column 9  Width=91
+Column 10 Width=70
+Column 11 Width=112
+Column 12 Width=112
+Column 13 Width=112
+Column 14 Width=70
+Column 15 Width=98
+Column 16 Weight=1.0000
+Column 17 Width=-1
 
