--- a/RedDbg/imgui.ini
+++ b/RedDbg/imgui.ini
@@ -64,17 +64,16 @@ Column 12 Width=70
 Column 13 Weight=1.0000
 Column 14 Width=-1
 
-[Table][0x20A273C2,9]
+[Table][0x20A273C2,8]
 RefScale=13
-Column 0  Width=14
-Column 1  Width=42
-Column 2  Width=49
-Column 3  Width=14
-Column 4  Width=28
-Column 5  Width=28
-Column 6  Width=35
-Column 7  Weight=1.0000
-Column 8  Width=-1
+Column 0  Width=63
+Column 1  Width=112
+Column 2  Width=112
+Column 3  Width=112
+Column 4  Width=112
+Column 5  Width=35
+Column 6  Weight=1.0000
+Column 7  Width=-1
 
 [Table][0x43E0EA12,9]
 RefScale=13
@@ -1276,4 +1275,8 @@ Column 14 Width=70
 Column 15 Width=98
 Column 16 Weight=1.0000
 Column 17 Width=-1
+
+[Table][0xAD5F5BCC,4]
+RefScale=13
+Column 0  Sort=0v
 
